// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxInspectorSection should render with action on the right 1`] = `
<View
  style={
    Object {
      "marginTop": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255, 255, 255, 1)",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 20,
        }
      }
    >
      Test Section
    </Text>
    <Text>
      Right
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingBottom": 10,
      }
    }
  >
    <Text>
      Child
    </Text>
  </View>
</View>
`;

exports[`LogBoxInspectorSection should render with only heading 1`] = `
<View
  style={
    Object {
      "marginTop": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255, 255, 255, 1)",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "600",
          "includeFontPadding": false,
          "lineHeight": 20,
        }
      }
    >
      Test Section
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingBottom": 10,
      }
    }
  >
    <Text>
      Child
    </Text>
  </View>
</View>
`;
